agregamos archivos finales

--- a/static/html/artesanias/artesanos_editar.html
+++ b/static/html/artesanias/artesanos_editar.html
@@ -9,28 +9,71 @@
                 <input type="hidden" name="id" id="id" value="{id}">
                 <div class="row">
   <div class="col-sm-4">
-                        <label for="descripcion">Roles: </label>
+                    <label for="nombres">Artesanos: </label>
                     </div>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" 
-                        name="descripcion" id="descripcion"
+                        name="nombres" id="nombres"
                         required maxlength="50"
-                        value="{descripcion}" >
+                        value="{nombres}" >
                     </div>
 </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <!--<label for="padre">Depende de:</label>-->
-                    </div>
-<div class="col-sm-8">
-                        <!--<select name="padre" id="padre">
-                            <option value="0">Ninguno</option>-->
-                            <!--LISTADO_ROLES-->
-                            <!--<option value="{id}">{descripcion}</option>-->
-                            <!--LISTADO_ROLES-->
-                        <!--</select>-->
-                    </div>
- </div>
+<div class="row">
+    <div class="col-sm-4">
+                      <label for="primerapellido">primerapellido: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="primerapellido" id="primerapellido"
+                          required maxlength="50"
+                          value="{primerapellido}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                      <label for="segundoapellido">segundoapellido: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="segundoapellido" id="segundoapellido"
+                          required maxlength="50"
+                          value="{segundoapellido}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                      <label for="domicilio">domicilio: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="domicilio" id="domicilio"
+                          required maxlength="50"
+                          value="{domicilio}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                      <label for="telefono">telefono: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="telefono" id="telefono"
+                          required maxlength="50"
+                          value="{telefono}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                      <label for="correo">Correo: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="correo" id="correo"
+                          required maxlength="50"
+                          value="{correo}" >
+                      </div>
+  </div>
+                
 
                 <div style="text-align: center;">
                     <input type="submit" class="btn btn-primary" value="Guardar">
