--- a/static/html/artesanias/productos_editar.html
+++ b/static/html/artesanias/productos_editar.html
@@ -4,34 +4,78 @@
             <h5>Editar roles</h5>
         </div>
 <div class="card-body shadow rounded" >
-            <form action="/artesanias/roles/guardar" 
+            <form action="/artesanias/productos/guardar" 
                 method="POST">
                 <input type="hidden" name="id" id="id" value="{id}">
                 <div class="row">
   <div class="col-sm-4">
-                        <label for="descripcion">Roles: </label>
+                        <label for="descripcion">Producto: </label>
                     </div>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" 
                         name="descripcion" id="descripcion"
                         required maxlength="50"
-                        value="{descripcion}" >
+                        value="{producto}" >
                     </div>
 </div>
-                <div class="row">
-                    <div class="col-sm-4">
-                        <!--<label for="padre">Depende de:</label>-->
-                    </div>
-<div class="col-sm-8">
-                        <!--<select name="padre" id="padre">
-                            <option value="0">Ninguno</option>-->
-                            <!--LISTADO_ROLES-->
-                            <!--<option value="{id}">{descripcion}</option>-->
-                            <!--LISTADO_ROLES-->
-                        <!--</select>-->
-                    </div>
- </div>
+<div class="row">
+    <div class="col-sm-4">
+                          <label for="descripcion">Descripcion: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="descripcion" id="descripcion"
+                          required maxlength="50"
+                          value="{descripcion}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                          <label for="clasificacion_id">Clasificacion: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="clasificacion_id" id="clasificacion_id"
+                          required maxlength="50"
+                          value="{clasificacion_id}" >
+                      </div>
+  </div>
+ 
+  <div class="row">
+    <div class="col-sm-4">
+                          <label for="artesano_id">Artesano: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="artesano_id" id="artesano_id"
+                          required maxlength="50"
+                          value="{artesano_id}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                          <label for="precio">Precio: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="precio" id="precio"
+                          required maxlength="50"
+                          value="{precio}" >
+                      </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+                          <label for="existencia">Existencia: </label>
+                      </div>
+                      <div class="col-sm-8">
+                          <input type="text" class="form-control" 
+                          name="existencia" id="existencia"
+                          required maxlength="50"
+                          value="{existencia}" >
+                      </div>
+  </div>
 
+                
                 <div style="text-align: center;">
                     <input type="submit" class="btn btn-primary" value="Guardar">
                 </div>
