--- a/static/html/artesanias/carritos_listar.html
+++ b/static/html/artesanias/carritos_listar.html
@@ -55,7 +55,7 @@
 <div class="mx-auto m-3 p-3">
     <div class="card" style="width: 500px;">
         <div class="centrado card-header bg-success" >
-            <h5>Agregar productos</h5>
+            <h5>Agregar Pedido</h5>
         </div>
         <div class="card-body shadow rounded" >
             
