--- a/static/html/template.html
+++ b/static/html/template.html
@@ -102,12 +102,12 @@
 						<li><a href="/artesanias/pedidos/agregar">Agregar</a></li>
 					</ul>
                 </li>
-                <li><a href="/artesanias/carrito/listar">Carrito</a>
+                <!--<li><a href="/artesanias/carrito/listar">Carrito</a>
 					<ul class="submenu">
 						<li><a href="/artesanias/carrito/agregar">Agregar</a></li>
 					</ul>
-                </li>
-                <li><a href="/artesanias/carritos/listar">Carritos</a>
+                </li>-->
+                <li><a href="/artesanias/carritos/listar">Carrito</a>
 					<ul class="submenu">
 						<li><a href="/artesanias/carritos/agregar">Agregar</a></li>
 					</ul>
