--- a/static/html/artesanias/productos_listar.html
+++ b/static/html/artesanias/productos_listar.html
@@ -78,7 +78,7 @@
                   </div>
                    
                 <div style="text-align: center;">
-                    <input type="submit" class="btn btn-primary" value="Guardar">
+                    <input type="submit" class="btn btn-primary" value="Agregar">
                 </div>
 
                 
